syntax = "proto3";
option go_package = "./;proto";
import "google/protobuf/empty.proto";

service User {
    rpc GetUserList(PageInfo) returns (UserListResponse);
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);
    rpc GetUserById(IdRequest) returns (UserInfoResponse);
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty);
    rpc CheckPassword(CheckPasswordInfo) returns (CheckPasswordResponse);
}

message PageInfo {
    uint32 p_index = 1;
    uint32 p_size = 2;
}

message UserListResponse {
    uint32 total = 1;
    repeated UserInfoResponse data = 2;
}

message UserInfoResponse {
    int32 id = 1;
    string mobile = 2;
    string nick_name = 3;
    uint64 birthday = 4;
    int32 gender = 5;
    int32 role = 6;
    string password =7;
}

message MobileRequest {
    string mobile = 1;
}

message IdRequest {
    int32 id = 1;
}

message CreateUserInfo {
    string nick_name = 1;
    string password = 2;
    string mobile = 3;
}

message UpdateUserInfo {
    int32 id = 1;
    string nick_name = 2;
    int32 gender = 3;
    uint64 birthday = 4;
}

message CheckPasswordInfo {
    string password = 1;
    string encrypted_password = 2;
}

message CheckPasswordResponse {
    bool success = 1;
}